@@ -4269,6 +4269,98 @@ _hlt(x86_64_target_t target, const operand_vector_t *operands,
     return 0;
 }
 
+/*
+ * IDIV (Vol. 2A 3-375)
+ *
+ *      Opcode          Instruction             Op/En   64-bit  Compat/Leg
+ *      F6 /7           IDIV r/m8               M       Valid   Valid
+ *      REX + F6 /7     IDIV r/m8*              M       Valid   N.E.
+ *      F7 /7           IDIV r/m16              M       Valid   Valid
+ *      F7 /7           IDIV r/m32              M       Valid   Valid
+ *      REX.W + F7 /7   IDIV r/m64              M       Valid   N.E.
+ *
+ *      * In 64-bit mode, AH, BH, CH, DH cannot be accessed if a REX prefix is
+ *        used
+ *
+ *
+ *      Op/En   Operand1        Operand2        Operand3        Operand4
+ *      M       ModR/M:r/m(r,w) NA              NA              NA
+ */
+static int
+_idiv(x86_64_target_t target, const operand_vector_t *operands,
+     x86_64_instr_t *instr)
+{
+    operand_t *op;
+    x86_64_val_t *val;
+    int ret;
+    x86_64_enop_t enop;
+    size_t opsize;
+    size_t addrsize;
+    int opcode1;
+    int opcode2;
+    int opcode3;
+
+    if ( 1 == mvector_size(operands) ) {
+        op = mvector_at(operands, 0);
+
+        val = x86_64_eval_operand(op);
+        if ( NULL == val ) {
+            /* Error */
+            return -1;
+        }
+
+        if ( _is_reg_addr8(val) ) {
+            ret = _encode_m(val, 7, &enop);
+            opsize = SIZE8;
+            addrsize = _resolve_address_size1(val);
+            opcode1 = 0xf6;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else if ( _is_reg_addr16(val) ) {
+            ret = _encode_m(val, 7, &enop);
+            opsize = SIZE16;
+            addrsize = _resolve_address_size1(val);
+            opcode1 = 0xf7;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else if ( _is_reg_addr32(val) ) {
+            ret = _encode_m(val, 7, &enop);
+            opsize = SIZE32;
+            addrsize = _resolve_address_size1(val);
+            opcode1 = 0xf7;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else if ( _is_reg_addr64(val) ) {
+            ret = _encode_m(val, 7, &enop);
+            opsize = SIZE64;
+            addrsize = _resolve_address_size1(val);
+            opcode1 = 0xf7;
+            opcode2 = -1;
+            opcode3 = -1;
+        } else {
+            ret = -1;
+        }
+
+        if ( ret < 0 ) {
+            free(val);
+            return -EOPERAND;
+        }
+        ret = _build_instruction(target, &enop, opsize, addrsize, instr);
+        if ( ret < 0 ) {
+            free(val);
+            return -EOPERAND;
+        }
+        instr->opcode1 = opcode1;
+        instr->opcode2 = opcode2;
+        instr->opcode3 = opcode3;
+
+        free(val);
+
+        return 0;
+    } else {
+        return -EOPERAND;
+    }
+}
 
 /*
  * JMP (Vol. 2A 3-424)
@@ -5019,6 +5111,9 @@ arch_assemble_x86_64(stmt_vector_t *vec)
             } else if ( 0 == strcasecmp("hlt", stmt->u.instr->opcode) ) {
                 /* HLT */
                 ret = _hlt(target, stmt->u.instr->operands, &instr);
+            } else if ( 0 == strcasecmp("idiv", stmt->u.instr->opcode) ) {
+                /* IDIV */
+                ret = _idiv(target, stmt->u.instr->operands, &instr);
             } else if ( 0 == strcasecmp("jmp", stmt->u.instr->opcode) ) {
                 /* JMP */
                 ret = _jmp(target, stmt->u.instr->operands, &instr);
